# xeus-ug4

./: CMakeLists.txt  LICENSE  README.md  apt.txt  environment.yml  postBuild  start
binder/: apt.txt  environment.yml  postBuild  start
docker/: Dockerfile  docker-compose.yml
notebooks/: PyVista.ipynb
notebooks/skin/: SkinDiffusion.ipynb  SkinDiffusion.lua  SkinDiffusionWithLagtime.ipynb  SkinDiffusionWithLagtime.lua  skin2d-aniso.ugx
notebooks/skin/vtk/: README.txt
notebooks/tutorial-fem/: tutorial-fem-01.ipynb  tutorial-fem-01.lua  tutorial-fem-02.ipynb  tutorial-fem-02.lua  x_solution.vtu
notebooks/tutorial-fem/grids/: unit_square_quad.ugx  unit_square_tri.ugx
share/jupyter/kernels/ug4_kernel/: kernel.json.in
src/: custom_interpreter.cpp  custom_interpreter.hpp  main.cpp
